--- a/games.css
+++ b/games.css
@@ -1,32 +1,24 @@
 @import url(https://fonts.googleapis.com/css?family=Megrim|Rajdhani&subset=latin,latin-ext);
-html {
-	height: 100%;
-}
+@import url('https://fonts.googleapis.com/css?family=Major+Mono+Display');
+
 body {
-	margin: 0px;
-	display: flex;
-	flex-direction: column;
-	text-align: center;
-	color: #000;
-	height: 100%;
-	border-top: 5px solid #066fe5;
-	box-sizing: border-box;
 	font-family: Rajdhani;
 }
 #header {
 	height: 100px;
 	background-color: #eee;
 	color: #444;
-	font-family: Megrim;
+	font-family: 'Major Mono Display';
+	text-transform: lowercase;
 	font-size: 55px;
 	line-height: 100px;
+	box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
 }
 #header a {
 	text-decoration: none;
 	color: #000;
 }
 #games {
-	background-color: #ddd;
 	padding-top: 20px;
 	padding-bottom: 20px;
 	flex: 1;
@@ -41,10 +33,10 @@ body {
 	font-size: 30px;
 }
 #games div {
-	background-color: #ccc;
+	background-color: #fafafa;
 	margin: 0 30px;
 	padding: 20px;
-	border-radius: 8px;
+	box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
 }
 #games a:hover {
 	color: #666;
