--- a/home.css
+++ b/home.css
@@ -1,21 +1,15 @@
-@import url(https://fonts.googleapis.com/css?family=Megrim);
-html {
-	height: 100%;
-}
+@import url('https://fonts.googleapis.com/css?family=Major+Mono+Display');
+
 body {
-	margin: 0px;
-	text-align: center;
-    height: 100%;
-    font-size: 60px;
-    font-family: Megrim, sans-serif;
+    font-size: 40px;
+    font-family: 'Major Mono Display', sans-serif;
+    text-transform: lowercase;
     background-color: #eee;
-    display: grid;
-    border-top: 5px solid #066fe5;
-    box-sizing: border-box;
 }
 a {
     text-decoration: none;
     color: #000;
+    transition: color;
     transition-duration: 1.5s;
 }
 #content {
