--- a/games.css
+++ b/games.css
@@ -1,58 +1,88 @@
 @import url(https://fonts.googleapis.com/css?family=Megrim|Rajdhani&subset=latin,latin-ext);
 @import url('https://fonts.googleapis.com/css?family=Major+Mono+Display');
 
+html {
+	height: 100%;
+}
 body {
 	font-family: Rajdhani;
 }
 #header {
-	height: 100px;
 	background-color: #eee;
 	color: #444;
 	font-family: 'Major Mono Display';
 	text-transform: lowercase;
-	font-size: 55px;
-	line-height: 100px;
-	box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
+	font-size: 5rem;
+	line-height: 5rem;
+	box-shadow: 0px 0.05rem 0.25rem rgba(0, 0, 0, 0.5);
+	padding: 2rem 0;
 }
 #header a {
 	text-decoration: none;
 	color: #000;
 }
 #games {
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 	flex: 1;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
 #games a {
 	color: #000;
 	text-decoration: none;
-	font-size: 30px;
+	font-size: 4rem;
 }
 #games div {
 	background-color: #fafafa;
-	margin: 0 30px;
-	padding: 20px;
+	width: 40rem;
+	margin: 1rem 1.5rem;
+	padding: 1rem;
 	box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
 }
 #games a:hover {
 	color: #666;
 }
 #games img {
-	width: 32px;
-	height: 32px;
-	float: left;
-	margin-right: 10px;
+	width: 3rem;
+	height: 3rem;
+	float: center;
+	margin-right: 1rem;
 }
 ul {
 	padding: 0px;
 	margin: 0px;
 	list-style-type: none;
-	text-align: left
+	text-align: center;
 }
 li {
 	padding: 5px 0;
+}
+
+@media (min-width: 1050px) {
+	#header {
+		font-size: 2.8rem;
+		padding: 0;
+	}
+	#games {
+		flex-direction: row;
+	}
+	#games div {
+		width: initial;
+		margin: 0 1.5rem;
+	}
+	#games a {
+		font-size: 1.5rem;
+	}
+	#games img {
+		width: 32px;
+		height: 32px;
+		margin-right: 0.5rem;
+		float: left;
+	}
+	ul {
+		text-align: left;
+	}
 }
