--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 html {
-	height: 100%;
+	min-height: 100%;
+	font-size: 20px;
 }
 body {
 	margin: 0px;
@@ -7,8 +8,14 @@ body {
 	flex-direction: column;
 	text-align: center;
 	color: #000;
-	height: 100%;
+	min-height: 100%;
 	background-color: #ddd;
-	border-top: 3px solid #066fe5;
+	border-top: 0.5rem solid #066fe5;
 	box-sizing: border-box;
+}
+
+@media (min-width: 1050px) {
+	body {
+		border-width: 0.15rem;
+	}
 }
